# dink

./: .gitignore  casia_v01_cnn.py  casia_v02_cnn.py  casia_v03_cnn.py  casia_v04_cnn.py  casia_v05_cnn.py  casia_v06_cnn.py  casia_v07_cnn.py  casia_v08_lstm.py  casia_v09_gru.py  casia_v10_gru.py  casia_v11_gru.py  install_package.sh  make_data.py  pot2txt  readme.txt  requests.txt
data/labels/: label-gb2312-level1.c  label-gb2312-level2.txt  make_code.py
tools/HRSingle/: HRSingle.cpp  HRSingle.h  HRSingle.rc  HRSingle.sln  HRSingle.vcxproj  HRSingle.vcxproj.filters  HRSingleDlg.cpp  HRSingleDlg.h  resource.h
tools/HRSingle/dink/: dink.h  dink_labels.cpp  dink_model.cpp
tools/HRSingle/res/: HRSingle.rc2
tools/pot2txt/: CMakeLists.txt  pot2txt.c  pot2txt.sln  pot2txt.vcxproj  pot2txt.vcxproj.filters
